--- a/CSS26/style.css
+++ b/CSS26/style.css
@@ -13,12 +13,18 @@
     height: 100vh;
     width: 100vw;
     overflow-x: none;
+    background-color: #FFDEE9;
+    background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
+
 }
 
 
 .navcontainer{
     width: 100vw;
-    background-color: rgb(179, 179, 189);
+    /* background-color: rgb(179, 179, 189); */
+    background-color: #0093E9;
+    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+
     min-height: 80px;
     display: flex;
     justify-content: center;
@@ -52,10 +58,31 @@ nav{
 
 a{
     text-decoration: none;
+    color: azure;
+
 }
 #navitems{
     display: flex;
     gap: 40px;
 
+}
+
+.footerbox{
+    background-color: #0093E9;
+    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+    text-align: center;
+    min-height: 40px;
+}
+
+.footerbox{
+    color: azure;
+    font-size: 2rem;
+}
+
+.contentbox{
+    width: 70%;
+    margin: auto;
+    border: 1px solid black;
+    background-color: white;
 }
 
