--- a/CSS26/style.css
+++ b/CSS26/style.css
@@ -84,5 +84,16 @@ a{
     margin: auto;
     border: 1px solid black;
     background-color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
 }
 
+.item{
+    display: flex;
+    justify-content: space-between;
+}
+
+.rightbox img{
+     height: 400px;
+}
