--- a/CSS26/style.css
+++ b/CSS26/style.css
@@ -22,8 +22,9 @@
 .navcontainer{
     width: 100vw;
     /* background-color: rgb(179, 179, 189); */
-    background-color: #0093E9;
-    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+    background-color: #10181b;
+    background-image: linear-gradient(43deg, #10181b 0%, #a72aa0 46%, #d09520 100%);
+
 
     min-height: 80px;
     display: flex;
@@ -34,7 +35,7 @@
 
 nav{
     width: 100%;
-    overflow-x: none;
+    
 }
 
 #navlist{
@@ -45,7 +46,7 @@ nav{
     list-style: none;
     font-size: 2rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -68,8 +69,9 @@ a{
 }
 
 .footerbox{
-    background-color: #0093E9;
-    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+    background-color: #10181b;
+    background-image: linear-gradient(43deg, #10181b 0%, #a72aa0 46%, #d09520 100%);
+
     text-align: center;
     min-height: 40px;
 }
@@ -80,20 +82,81 @@ a{
 }
 
 .contentbox{
-    width: 70%;
+    width: 50%;
     margin: auto;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     background-color: white;
     display: flex;
     flex-direction: column;
     gap: 100px;
+    padding: 3rem;
+    box-shadow: 0px 0px 30px black;
 }
 
 .item{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
 }
 
+.rightbox{
+       position: relative;
+       overflow: hidden;
+       transition: all 0.3s linear 0s;
+       box-shadow: 1px 1px 10px black;
+       border-radius: 20px;
+
+}
 .rightbox img{
      height: 400px;
+     border-radius: 20px;
+     transition: all 0.6s linear 0s;
+}
+
+.rightbox:hover{
+    transform: scale(1.1);
+}
+
+.leftbox{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.leftbox h2{
+
+    font-size: 2rem;
+}
+
+.ingbox{
+    font-size: 1.3rem;
+}
+
+.recipebox{
+    font-size: 1.1rem;
+}
+
+.rightbox .overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(36, 34, 34, 0.713);
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: all 0.3s linear 0s;
+}
+
+.rightbox:hover .overlay{
+    opacity: 1;
+}
+
+
+.rightbox .overlay span{
+    color: white;
+    font-size: 1.2rem;
 }
